# waki

./: .clang-format  .clang_format_style  .plan  LICENSE.md  README.md  comments.md  default_initialization.md  identifiers.md  imports.md  nullability.md  structs.md
compiler/src/: CMakeLists.txt  README.md  main.cpp
compiler/src/emitter/: CMakeLists.txt  README.md  waki_emitter.cpp  waki_emitter.h
compiler/src/modules/: CMakeLists.txt  README.md  builtin_modules.cpp  builtin_modules.h  epoch.h  function.cpp  function.h  module.h  module_error.h
compiler/src/parser/: CMakeLists.txt  README.md  ast_node.h  ast_visitor.h  parse_result.h  parser.cpp  parser.h  parser_error.h  statement_creation_error.h  variable_declaration_statement.h
compiler/src/parser/expressions/: CMakeLists.txt  bool_literal_expression.h  (+8 more)
compiler/src/tokenizer/: CMakeLists.txt  README.md  lexeme_flags.h  lexeme_metadata.cpp  lexeme_metadata.h  lexeme_type.h  lexemes.cpp  lexemes.h  token.cpp  token.h  token_names.h  token_patterns.h  token_type.h  tokenizer.cpp  tokenizer.h  tokenizer_error.h  tokenizer_match.h
compiler/src/typechecker/: CMakeLists.txt  README.md  identifier.cpp  identifier.h  identifier_already_defined_error.h  identifier_table.cpp  identifier_table.h  identifier_undefined_error.h  mutability_violation_error.h  type_error.h  typechecker.cpp  typechecker.h  typechecker_error.h  uninferrable_type_error.h
compiler/test/: CMakeLists.txt  README.md  main.cpp
compiler/test/parser/: CMakeLists.txt  parser.cpp
compiler/test/tokenizer/: CMakeLists.txt  token.cpp  tokenizer.cpp
(+26 files in other folders)
